examples/oberon0/tests/data/incomplete.mod
MODULE Example;
  PROCEDURE f();
    VAR x: INTEGER;
  BEGIN
    g(1,
    x := 2 +
  END f;
  PROCEDURE g();
  BEGIN
  END g;
END Example.
